// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar snapshots userName is falsey snapshot 1`] = `
<DocumentFragment>
  <nav
    class="navbar"
  >
    <ul
      class="navbar__links"
    >
      <li
        class="navbar__links__item"
      >
        <a
          aria-current="page"
          class="active"
          href="/"
        >
          <h1
            class="navbar__links__item__heading"
          >
            SoundClone
          </h1>
        </a>
      </li>
      <li
        class="navbar__links__item"
      >
        <a
          aria-current="page"
          class="navbar__links__item--active"
          href="/"
        >
          <img
            alt="home"
            class="navbar__links__item__img"
            src="home.png"
          />
          <span
            class="navbar__links__item__text"
          >
            home
          </span>
        </a>
      </li>
      <li
        class="navbar__links__search"
      >
        <input
          type="text"
        />
        <button
          type="button"
        >
          <img
            alt="search"
            class="navbar__links__search__img"
            src="search.png"
          />
        </button>
      </li>
      <li
        class="navbar__links__item"
      >
        <a
          href="/login"
        >
          <img
            alt="login"
            class="navbar__links__item__img"
            src="login.png"
          />
          <span
            class="navbar__links__item__text"
          >
            login
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Navbar snapshots userName is truthy snapshot 1`] = `
<DocumentFragment>
  <nav
    class="navbar"
  >
    <ul
      class="navbar__links"
    >
      <li
        class="navbar__links__item"
      >
        <a
          aria-current="page"
          class="active"
          href="/"
        >
          <h1
            class="navbar__links__item__heading"
          >
            SoundClone
          </h1>
        </a>
      </li>
      <li
        class="navbar__links__item"
      >
        <a
          aria-current="page"
          class="navbar__links__item--active"
          href="/"
        >
          <img
            alt="home"
            class="navbar__links__item__img"
            src="home.png"
          />
          <span
            class="navbar__links__item__text"
          >
            home
          </span>
        </a>
      </li>
      <li
        class="navbar__links__search"
      >
        <input
          type="text"
        />
        <button
          type="button"
        >
          <img
            alt="search"
            class="navbar__links__search__img"
            src="search.png"
          />
        </button>
      </li>
      <li
        class="navbar__links__item"
      >
        <a
          href="/profile/validName"
        >
          <img
            alt="profile"
            class="navbar__links__item__img"
            src="profile.png"
          />
          <span
            class="navbar__links__item__text"
          >
            profile
          </span>
        </a>
      </li>
      <li
        class="navbar__links__item"
      >
        <a
          href="/upload"
        >
          <img
            alt="upload"
            class="navbar__links__item__img"
            src="upload.png"
          />
          <span
            class="navbar__links__item__text"
          >
            upload
          </span>
        </a>
      </li>
      <li
        class="navbar__links__item"
      >
        <a
          href="/logout"
        >
          <img
            alt="logout"
            class="navbar__links__item__img"
            src="logout.png"
          />
          <span
            class="navbar__links__item__text"
          >
            logout
          </span>
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
